--- a/public/css/Login/Login.css
+++ b/public/css/Login/Login.css
@@ -15,19 +15,19 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: none;  /* Não usamos o background-image aqui */
+    background-image: none;  
     z-index: -1;
 }
 
 .background-image img {
-    width: 100%;  /* Faz a imagem ocupar toda a tela */
+    width: 100%; 
     height: 100%;
-    object-fit: cover;  /* Para garantir que a imagem preencha a tela corretamente */
+    object-fit: cover;
 }
 
 .container {
     background: rgba(255, 255, 255, 0.8); 
-    padding: 20px;
+    padding: 39px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
