--- a/public/css/Login/Login.css
+++ b/public/css/Login/Login.css
@@ -32,6 +32,10 @@ body {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 h2 {
@@ -40,7 +44,7 @@ h2 {
 }
 
 input {
-    width: 100%;
+    width: 100%; 
     padding: 10px;
     margin: 10px 0;
     border: 1px solid #ccc;
@@ -48,7 +52,7 @@ input {
 }
 
 button {
-    width: 100%;
+    width: 110%; 
     padding: 10px;
     background-color: #007bff;
     border: none;
@@ -90,6 +94,7 @@ p a:hover {
 
 .password-container {
     position: relative;
+    width: 100%; 
 }
 
 .show-password-icon {
