--- a/public/css/Header/Header.css
+++ b/public/css/Header/Header.css
@@ -4,7 +4,7 @@ header {
     align-items: center;
     justify-content: space-between;
     background: #ECEFF1;
-    //background: linear-gradient(to right, #004070, #800042);
+   // background: linear-gradient(to right, #004070, #800042);
     padding: 0 20px;
     color: white;
     position: fixed;
@@ -43,15 +43,17 @@ header .user-info a:hover {
 .dropdown-menu {
     display: none;
     position: absolute;
-    right: 0;
     top: 60px; 
-    background: white;
-    color: black;
+    left: 0; 
+    background-color: white;
+    border: 1px solid #ddd;
+    padding: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    width: 200px;
+    width: 180px;
     z-index: 1000;
 }
+
 .user-info:hover .dropdown-menu {
     display: block;
 }
@@ -64,4 +66,17 @@ header .user-info a:hover {
 .dropdown-menu a:hover {
     background-color: #f0f0f0;
 
+}
+
+.rotate {
+    transition: transform 0.5s ease-in-out;
+}
+
+.rotate.clicked {
+    transform: rotate(180deg);
+}
+
+
+.dropdown-menu.show {
+    display: block;
 }
